--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -161,7 +161,7 @@ jobs:
     file: platform-automation-tasks/tasks/configure-product.yml
     params:
       ENV_FILE: config/env.yml
-      CONFIG_FILE: config/ert.yml
+      CONFIG_FILE: config/small-footprint-pas.yml
     input_mapping:
       config: interpolated-creds
       env: interpolated-creds
