--- a/ci/testflight-deployment/infra-settings.yml
+++ b/ci/testflight-deployment/infra-settings.yml
@@ -32,7 +32,7 @@ pcf_opsman_director_config_reserved_ip_ranges: 10.0.0.2-10.0.0.30,10.0.0.40-10.0
 opsman_ip: 10.0.0.30
 infra_ntp: 0.de.pool.ntp.org
 testflight_opsman_hostname: pcf.testflight.dell-app.com
-testflight_opsman_vm_name: Ops_Manager_TestFlight
+testflight_opsman_vm_name: Ops_Manager_TestFlight_PCF_Operations_Release
 testflight_opsman_api_username: admin
 vcenter_netmask: 255.255.255.0
 vcenter_host_full_govc_path: /drinks-dc/host/drinks-cl/192.168.100.4
