--- a/config/small-footprint-pas-2_7_x.yml
+++ b/config/small-footprint-pas-2_7_x.yml
@@ -81,8 +81,9 @@ product-properties:
     value: 120
   .properties.cf_networking_enable_space_developer_self_service:
     value: false
-  .properties.cf_networking_internal_domain:
-    value: apps.internal
+  .properties.cf_networking_internal_domains:
+    value:
+    - name: apps.internal
   .properties.cloud_controller_completed_tasks_cutoff_age_in_days:
     value: 31
   .properties.cloud_controller_default_health_check_timeout:
@@ -110,7 +111,7 @@ product-properties:
   .properties.credhub_database:
     selected_option: internal_mysql
     value: internal_mysql
-  .properties.credhub_key_encryption_passwords:
+  .properties.credhub_internal_provider_keys:
     value:
     - key:
         secret: ((testflight_ert_properties_credhub_key_encryption_passwords_0_key))
@@ -214,8 +215,6 @@ product-properties:
   .properties.router_keepalive_connections:
     selected_option: enable
     value: enable
-  .properties.router_prune_all_stale_routes:
-    value: false
   .properties.routing_disable_http:
     value: false
   .properties.routing_log_client_ips:
@@ -242,11 +241,7 @@ product-properties:
     value: plain
   .properties.smtp_enable_starttls_auto:
     value: false
-  .properties.syslog_agent_enabled:
-    value: false
   .properties.syslog_drop_debug:
-    value: true
-  .properties.syslog_metrics_to_syslog_enabled:
     value: true
   .properties.syslog_tls:
     selected_option: disabled
