--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -88,12 +88,110 @@ groups:
 - name: pivnet-downloads
   jobs:
   - fetch-opsman
+  - fetch-small-footprint-pas
+  - fetch-pas
   - fetch-platform-automation
 - name: testflight-dependencies
   jobs:
   - install-testflight-opsman
+  - upload-and-stage-pas
+  - configure-pas
+  - apply-product-changes
 
 jobs:
+- name: upload-and-stage-pas
+  serial: true
+  plan:
+  - aggregate:
+    - get: platform-automation-image
+      params:
+        unpack: true
+      trigger: true
+      passed: [ "install-testflight-opsman" ]
+    - get: platform-automation-tasks
+      params:
+        unpack: true
+    - get: config
+  - task: interpolate-creds
+    <<: *interpolate-creds
+  - task: download-pas
+    image: platform-automation-image
+    file: platform-automation-tasks/tasks/download-product-s3.yml
+    params:
+      CONFIG_FILE: config/download-small-footprint-pas.yml
+    input_mapping:
+      config: interpolated-creds
+    output_mapping:
+      downloaded-product: pas-product
+      downloaded-stemcell: pas-stemcell
+  - task: upload-and-stage-product
+    image: platform-automation-image
+    file: platform-automation-tasks/tasks/upload-and-stage-product.yml
+    params:
+      ENV_FILE: config/env.yml
+      CONFIG_FILE: ""
+    input_mapping:
+      product: pas-product
+      env: interpolated-creds
+  - task: upload-pas-stemcell
+    image: platform-automation-image
+    file: platform-automation-tasks/tasks/upload-stemcell.yml
+    params:
+      ENV_FILE: config/env.yml
+    input_mapping:
+      env: interpolated-creds
+      stemcell: pas-stemcell
+- name: configure-pas
+  serial: true
+  serial_groups: [ install ]
+  plan:
+  - aggregate:
+      - get: platform-automation-image
+        params:
+          unpack: true
+        passed:
+          - upload-and-stage-pas
+        trigger: true
+      - get: platform-automation-tasks
+        params:
+          unpack: true
+      - get: config
+  - task: interpolate-creds
+    <<: *interpolate-creds
+  - task: configure-pas
+    image: platform-automation-image
+    file: platform-automation-tasks/tasks/configure-product.yml
+    params:
+      ENV_FILE: config/env.yml
+      CONFIG_FILE: config/small-footprint-pas-2_7_x.yml
+    input_mapping:
+      config: interpolated-creds
+      env: interpolated-creds
+- name: apply-product-changes
+  serial: true
+  serial_groups: [ install ]
+  plan:
+  - aggregate:
+      - get: platform-automation-image
+        params:
+          unpack: true
+        passed:
+          - configure-pas
+        trigger: true
+      - get: platform-automation-tasks
+        params:
+          unpack: true
+      - get: config
+  - task: interpolate-creds
+    <<: *interpolate-creds
+  - task: apply-product-changes
+    image: platform-automation-image
+    file: platform-automation-tasks/tasks/apply-changes.yml
+    attempts: 5
+    params:
+      ENV_FILE: config/env.yml
+    input_mapping:
+      env: interpolated-creds
 - name: install-testflight-opsman
   serial: true
   plan:
@@ -252,6 +350,40 @@ jobs:
     - put: platform-automation-image
       params:
         file: platform-automation-pivnet/*image*.tgz
+- name: fetch-small-footprint-pas
+  serial: true
+  plan:
+  - aggregate:
+    - get: daily
+      trigger: true
+    - get: platform-automation-image
+      params:
+        unpack: true
+    - get: platform-automation-tasks
+      params:
+        unpack: true
+    - get: config
+  - task: check-prerequisites------pivnet
+    <<: *check-pivnet
+  - task: check-prerequisites------s3
+    <<: *check-s3
+  - task: interpolate-creds
+    <<: *interpolate-creds
+  - task: download-product-small-footprint-pas-and-stemcell
+    image: platform-automation-image
+    file: platform-automation-tasks/tasks/download-product.yml
+    params:
+      CONFIG_FILE: config/download-small-footprint-pas.yml
+    input_mapping:
+      config: interpolated-creds
+    output_mapping: {downloaded-stemcell: pas-stemcell}
+  - aggregate:
+    - put: pas-product
+      params:
+        file: downloaded-product/*
+    - put: pas-stemcell
+      params:
+        file: pas-stemcell/*.tgz
 - name: fetch-opsman
   serial: true
   plan:
@@ -328,6 +460,24 @@ resources:
     region_name: (( grab meta.minio_region ))
     secret_access_key: (( grab meta.minio_secret_key ))
     regexp: \[ops-manager,(.*)\].*.ova
+- name: pas-product
+  type: s3
+  source:
+    endpoint: (( grab meta.minio_url ))
+    access_key_id: (( grab meta.minio_access_key ))
+    bucket: (( grab meta.minio_bucket_for_pivotal_product ))
+    region_name: (( grab meta.minio_region ))
+    secret_access_key: (( grab meta.minio_secret_key ))
+    regexp: \[elastic-runtime,(.*)\].*.pivotal
+- name: pas-stemcell
+  type: s3
+  source:
+    endpoint: (( grab meta.minio_url ))
+    access_key_id: (( grab meta.minio_access_key ))
+    bucket: (( grab meta.minio_bucket_for_pivotal_product ))
+    region_name: (( grab meta.minio_region ))
+    secret_access_key: (( grab meta.minio_secret_key ))
+    regexp: \[stemcells-ubuntu-xenial,(.*)\]bosh-stemcell-.*-vsphere.*\.tgz
 - name: platform-automation-tasks
   type: s3
   source:
