--- a/config/small-footprint-pas-2_8_x.yml
+++ b/config/small-footprint-pas-2_8_x.yml
@@ -342,7 +342,7 @@ product-properties:
   .uaa.service_provider_key_credentials:
     value:
       cert_pem: ((testflight_ert_properties_uaa_service_provider_key_credentials.cert_pem))
-      private_key_pem: ((testflight_ert_properties_uaa_service_provider_key_credentials.private_key_pem))
+      private_key_pem: ((testflight_ert_properties_uaa_service_provider_key_credentials.private_key))
 network-properties:
   network:
     name: ((testflight_vcenter_network))
