--- a/config/small-footprint-pas-2_8_x.yml
+++ b/config/small-footprint-pas-2_8_x.yml
@@ -341,7 +341,7 @@ product-properties:
     value: 10\.\d{1,3}\.\d{1,3}\.\d{1,3}|192\.168\.\d{1,3}\.\d{1,3}|169\.254\.\d{1,3}\.\d{1,3}|127\.\d{1,3}\.\d{1,3}\.\d{1,3}|172\.1[6-9]{1}\.\d{1,3}\.\d{1,3}|172\.2[0-9]{1}\.\d{1,3}\.\d{1,3}|172\.3[0-1]{1}\.\d{1,3}\.\d{1,3}
   .uaa.service_provider_key_credentials:
     value:
-      cert_pem: ((testflight_ert_properties_uaa_service_provider_key_credentials.cert_pem))
+      cert_pem: ((testflight_ert_properties_uaa_service_provider_key_credentials.certificate))
       private_key_pem: ((testflight_ert_properties_uaa_service_provider_key_credentials.private_key))
 network-properties:
   network:
