--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -236,7 +236,7 @@ jobs:
         OM_PASSWORD: ((testflight_opsman_api_password))
       inputs:
       - name: ci-tasks
-      - name: config
+      - name: testflight-state-repo
       - name: interpolated-creds
       run:
         path: ci-tasks/ci/tasks/remove-testflight-opsman-if-exists.sh
